# ComputacionGrafica_2022-2

./: .gitignore  README.md
RayTracing/: .gitignore  CMakeLists.txt  main.cpp
RayTracing/include/: Camara.h  Esferav2.h  Luz.h  Mundo.h  Objeto.h  Rayo.h  vector.h
RayTracing/src/: Camara.cpp  Mundo.cpp  Objeto.cpp  vector.cpp
